# dino

./: meson.build  meson_options.txt  xep-fdp-share.xml
libdino/: meson.build
libdino/src/: application.vala
libdino/src/dbus/: background.vala  notifications.vala
libdino/src/entity/: account.vala
libdino/src/service/: chat_interaction.vala  contact_model.vala  database.vala  file_manager.vala  history_sync.vala  muc_manager.vala  notification_events.vala
libdino/src/util/: display_name.vala  mentions.vala
main/: meson.build
main/data/: chat_input.ui  conversation_details.ui  forms_tab.ui  gresource.xml
main/src/ui/: application.vala  conversation_details.vala  conversation_view_controller.vala  form_editor_dialog.vala  notifier_freedesktop.vala  notifier_gnotifications.vala  tray_freedesktop.vala
main/src/ui/chat_input/: chat_input_controller.vala  view.vala
main/src/ui/conversation_selector/: conversation_selector.vala  conversation_selector_row.vala
main/src/ui/util/: helper.vala
main/src/ui/widgets/: avatar_picture.vala  forms_tab.vala
main/src/ui/widgets/form_editor/: row.vala  widget.vala
main/src/view_model/: conversation_details.vala
main/src/windows/: conversation_details.vala
plugins/: meson.build
plugins/fdp/: meson.build
plugins/fdp/src/: plugin.vala  register_plugin.vala
plugins/omemo/src/: plugin.vala
plugins/omemo/src/logic/: database.vala
plugins/openpgp/src/: database.vala  plugin.vala
plugins/tray-icon/: meson.build
plugins/tray-icon/src/: plugin.vala  register_plugin.vala
plugins/tray-icon/vapi/: ayatana-appindicator-glib.vapi
xmpp-vala/src/module/xep/: 0004_data_forms.vala
xmpp-vala/src/module/xep/0045_muc/: flag.vala  module.vala
